--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "NelsonKuang",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hiooyUI/jquery-scroll-cascade-select.git"
+  },  
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-less": "~0.11.0",
