--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-scroll-cascade-select",
-  "version": "1.0.0",
-  "description": "Jquery Scroll Cascade Select",
+  "version": "1.0.1",
+  "description": "Scroll Cascade Select, a light-weight flexible Scroll Picker similiar to Mobiscroll",
   "main": "Gruntfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
